infra/k8s/sanction-auth-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sanction-database-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sanction-database-mongo
  template:
    metadata:
      labels:
        app: sanction-database-mongo
    spec:
      containers:
        - name: sanction-database-mongo
          image: mongo

---
apiVersion: v1
kind: Service
metadata:
  name: sanction-database-mongo-srv
spec:
  selector:
    app: sanction-database-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
