infra/k8s/sanction-database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sanction-database-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sanction-database
  template:
    metadata:
      labels:
        app: sanction-database
    spec:
      containers:
        - name: sanction-database
          image: alan1903/sanction-database
---
apiVersion: v1
kind: Service
metadata:
  name: sanction-database-srv
spec:
  selector:
    app: sanction-database
  ports:
    - name: sanction-database
      protocol: TCP
      port: 3000
      targetPort: 3000
