infra/k8s/user-auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-auth
  template:
    metadata:
      labels:
        app: user-auth
    spec:
      containers:
        - name: user-auth
          image: alan1903/user-auth
---
apiVersion: v1
kind: Service
metadata:
  name: admin-auth-srv
spec:
  selector:
    app: admin-auth
  ports:
    - name: admin-auth
      protocol: TCP
      port: 3000
      targetPort: 3000
